--- a/style.css
+++ b/style.css
@@ -21,11 +21,21 @@
     height: 30px;
 }
 
-.cards {
-    background-color: green;
-    width: 250px;
-    height: 400px;
-    border: 1px solid black;
-    
+#cards {
+    display: flex;
+    justify-content: left;
+    flex-direction: row;
+    flex-wrap: wrap; /* 줄바꿈을 허용시켜준다. */
+    width: 100%;
+    gap: 12px;
 }
 
+#cards .card {
+    width: 16%;
+}
+
+.card img {
+    width: 100%;
+    aspect-ratio: 9/16;
+    object-fit: cover;
+}
